[project]
name = "flood-risk-predictor"
version = "1.0.0"
description = "Tampa Bay Flood Risk and Insurance Premium Predictor"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["flood-risk", "insurance", "climate-change", "geospatial", "fema", "noaa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.115.12",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "shapely>=2.1.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/flood-risk-predictor"
Repository = "https://github.com/yourusername/flood-risk-predictor"
Documentation = "https://github.com/yourusername/flood-risk-predictor/blob/main/README.md"
Issues = "https://github.com/yourusername/flood-risk-predictor/issues"
